Adding fixes to authentication.
